name:                yi-rope
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Yi
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Yi.Rope
    Yi.OldRope

  build-depends:
      base >=4.7 && <4.8
    , binary
    , bytestring
    , cautious-file
    , fingertree
    , rope
    , utf8-string >= 0.3.1

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -Wall

  other-modules:
    Yi.RopeSpec

  build-depends:
      base
    , binary
    , bytestring
    , filepath
    , hspec
    , yi-rope
    , HUnit
    , QuickCheck == 2.*
    , quickcheck-instances
    , criterion
    , random

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          MainBenchmarkSuite.hs
  hs-source-dirs:   bench, src
  ghc-options:      -Wall

  build-depends:
      base >=4.5 && <5
    , criterion
    , random
