name:                yi-rope
version:             0.8.0
synopsis:            A rope data structure used by Yi
description:         A rope data structure used by Yi
license:             GPL-2
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Yi
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.8.4, GHC==7.10.1

library
  ghc-options: -fpedantic-bottoms -fexpose-all-unfoldings -Wall -O2 -flate-dmd-anal -ferror-spans

  exposed-modules:
    Yi.Rope

  build-depends:
      base >=4.5 && <5
    , binary
    , bytestring
    , charsetdetect-ae >= 1.0.1
    , data-default
    , deepseq
    , fingertree
    , text
    , text-icu

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -funbox-strict-fields -Wall -O2
  other-modules:
    Yi.RopeSpec

  build-depends:
      base
    , hspec
    , QuickCheck == 2.*
    , quickcheck-instances
    , text
    , yi-rope

benchmark bench
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          MainBenchmarkSuite.hs
  hs-source-dirs:   bench
  ghc-options:      -funbox-strict-fields -Wall -O2

  build-depends:
      base >=4.5 && <5
    , criterion
    , deepseq
    , yi-rope

source-repository head
  type:     git
  location: https://github.com/yi-editor/yi-rope.git
